Tiny fix of footer alignment

--- a/EzhaBy/EzhaBy.Web/ezha-by-admin/src/App.css
+++ b/EzhaBy/EzhaBy.Web/ezha-by-admin/src/App.css
@@ -32,6 +32,12 @@
   min-height: 570px;
 }
 
+.footer {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+}
+
 .App .btn-red {
   color: black;
   background-color: rgba(235, 95, 95, 0.6);
